# WsFFN

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
src/: WsFFN.py  __init__.py
